[package]
name = "leptos-bulma"
description = "A Leptos component library based on Bulma CSS framework."
authors = ["Javier E. <jaedns@gmail.com>"]
homepage = "https://leptos-bulma.fermyon.app "
repository = "https://github.com/javierEd/leptos-bulma.git"
readme = "README.md"
license = "MIT"
categories = ["gui"]
keywords = ["components", "leptos", "ui", "web"]
version = "0.0.0-alpha.11"
edition = "2021"
exclude = [
    ".editorconfig",
    "bulma.jpg",
    "CHANGELOG.md",
    "website",
    "leptosfmt.toml",
]
publish = true

[dependencies]
grass = { version = "0.13", default-features = false }
icondata_core = { version = "0.1", optional = true }
icondata_fa = { version = "0.0", optional = true }
leptos = "0.6"
leptos_icons = { version = "0.3", optional = true }
leptos_router = "0.6"
leptos-use = "0.10"
web-sys = "0.3"

[features]
default = ["icondata-fa"]
leptos-icons = ["dep:icondata_core", "dep:leptos_icons"]
icondata-fa = ["leptos-icons", "dep:icondata_fa"]
ssr = ["leptos-use/ssr"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
